# flowydeamon/model_child_directory.go
@@ -12,6 +12,7 @@ package main
 
 import (
 	"encoding/json"
+	"bytes"
 	"fmt"
 )
 
@@ -261,8 +262,8 @@ func (o ChildDirectory) ToMap() (map[string]interface{}, error) {
 	return toSerialize, nil
 }
 
-func (o *ChildDirectory) UnmarshalJSON(bytes []byte) (err error) {
-    // This validates that all required properties are included in the JSON object
+func (o *ChildDirectory) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
 	// by unmarshalling the object into a generic map with string keys and checking
 	// that every required field exists as a key in the generic map.
 	requiredProperties := []string{
@@ -271,7 +272,7 @@ func (o *ChildDirectory) UnmarshalJSON(bytes []byte) (err error) {
 
 	allProperties := make(map[string]interface{})
 
-	err = json.Unmarshal(bytes, &allProperties)
+	err = json.Unmarshal(data, &allProperties)
 
 	if err != nil {
 		return err;
@@ -285,7 +286,9 @@ func (o *ChildDirectory) UnmarshalJSON(bytes []byte) (err error) {
 
 	varChildDirectory := _ChildDirectory{}
 
-	err = json.Unmarshal(bytes, &varChildDirectory)
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varChildDirectory)
 
 	if err != nil {
 		return err
