# src/server/restapi.ts
@@ -12,7 +12,7 @@ extendZodWithOpenApi(z);
 const DoEvalRequestSchema = z.object({
   id: z.string(),
   ex: z.string(),
-  context: FileSchema.or(DirectorySchema).optional(),
+  context: z.any(),
 });
 export type DoEvalRequest = z.infer<typeof DoEvalRequestSchema>;
 const ResultFilesSchema = z.record(z.array(z.union([FileSchema, DirectorySchema])));
@@ -21,8 +21,9 @@ export type ResultFiles = z.infer<typeof ResultFilesSchema>;
 export const JobFinishedRequestSchema = z
   .object({
     id: z.string(),
+    isCwlOutput: z.boolean(),
     exitCode: z.number().int(),
-    results: ResultFilesSchema,
+    results: z.record(z.any()),
   })
   .openapi('JobFinishedRequest');
 const WorkerStartedInput = z.object({
@@ -92,7 +93,7 @@ export function appendApi(s: Server, server: fastify.FastifyInstance) {
     },
     async (request, reply) => {
       const jsonData = request.body as JobFinishedRequest;
-      s.jobfinished(jsonData.id, jsonData.exitCode, jsonData.results);
+      s.jobfinished(jsonData.id, jsonData.exitCode, jsonData.isCwlOutput, jsonData.results);
       await reply.send({ message: 'OK' });
     },
   );
